# stronghold

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  flake.nix  input.css
app/: Cargo.toml
app/assets/: components-theme.css
app/src/: main.rs  main_csr.rs  main_ssr.rs  stuff.rs
components/: Cargo.toml
components/src/: navbar.rs
database/: Cargo.toml
database/src/applications/: mod.rs  post_oidc.rs  pre_recovery.rs  registration.rs  update_email.rs
database/src/bucket/: b2.rs  mod.rs  object.rs
server/: Cargo.toml
server/src/: client_socket.rs  lib.rs  stream_drop.rs
server/src/auth/: logging.rs  mod.rs  oidc.rs  recovery.rs  register.rs
server/src/settings/: email.rs  metadata.rs  password.rs  username.rs
server/src/user/: profile.rs
server/tests/: finish_oidc.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/validation/: image.rs  mod.rs  text.rs  unique.rs
ui/: Cargo.toml
ui/src/: about.rs  lib.rs  navbar.rs  not_found.rs
ui/src/auth/: dialogs.rs  login.rs  mod.rs  recovery.rs  register.rs
util/: Cargo.toml
util/src/: error.rs  lib.rs  mail.rs
