[workspace]
resolver = "3"
members = [ "database", "server", "shared", "util", "app" ]
exclude = []
default-members = [ "app" ]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sumit Modak <sumitftr@proton.me>"]
repository = "https://github.com/sumitftr/basic-auth"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
axum       = { version = "0.8", features = ["http2", "macros", "multipart", "ws"] }
axum-extra = { version = "0.12", features = ["erased-json"] }
base64     = { version = "0.22" }
bytes      = { version = "1" }
const-hex  = { version = "1.17", features = ["alloc"] }
celes      = { version = "2" }
dioxus     = { version = "0.7.3", features = ["fullstack"] }
dotenv     = { version = "0.15" }
hmac       = { version = "0.12" }
lettre     = { version = "0.11", features = ["tokio1-rustls", "tokio1-native-tls", "ring", "webpki-roots"] }
moka       = { version = "0.12", features = ["sync"] }
rand       = { version = "0.9" }
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha2       = { version = "0.10" }
sqlx       = { version = "0.8", features = ["runtime-tokio", "runtime-tokio-rustls", "postgres", "uuid", "time", "ipnetwork", "macros"] }
thiserror  = { version = "2" }
time       = { version = "0.3", features = ["macros", "formatting", "parsing"] }
tokio      = { version = "1", features = ["full"] }
tower      = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }
tracing    = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid       = { version = "1", features = ["v4"] }

[workspace.lints.clippy]
redundant_clone = "warn"
