[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
server = { path = "../server", optional = true }

axum = { workspace = true, optional = true }
dioxus = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = []
server = ["dioxus/server", "dep:server", "dep:tokio", "dep:axum", "dep:tracing-subscriber"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
