[package]
name = "components"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
dioxus = { workspace = true }
primitives = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
