[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
database = { path = "../database" }
shared = { path = "../shared" }
util = { path = "../util" }

axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

sysinfo = { version = "0.37" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
tokio = { workspace = true }
fake = { version = "4" }

[lints]
workspace = true
