[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
bytes = { workspace = true }
celes = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
