[package]
name = "util"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
shared = { path = "../shared"}

axum = { workspace = true }
base64 = { workspace = true }
const-hex = { workspace = true }
hmac = { workspace = true }
lettre = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }

[lints]
workspace = true
